--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "sofa/eloquence-base": "^5.5|^6.0|^7.0"
+        "sofa/eloquence-base": "^5.5|^6.0|^7.0|dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.5.0",
